[WIP] ajout des commentaires et correction du texte

--- a/SitePromotion/index.html
+++ b/SitePromotion/index.html
@@ -66,9 +66,10 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <img src="cuite.jpg" alt="Unsplashed background img 1" height="100" align="middle">
+             <h2 class="center brown-text"><i class="tiny material-icons">photo_library</i></h2>
             <h5 class="center">Postez vos images</h5>
             <p class="light">Partagez toutes vos images dignes de véritables photographes (ou pas). Vous pensez en mal à vos camarades ? Ou tout simplement vous souhaitez lui rappeler sa dernière cuite ? N'attendez plus !! C'est le moment de poster ces belles photos.</p>
+            <img src="cuite.jpg" alt="Unsplashed background img 1" height="100" align="middle">
           </div>
         </div>
 
@@ -83,7 +84,7 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">comment</i></h2>
             <h5 class="center">Commentez très honnêtement</h5>
 
             <p class="light">Votre esprit critique développé au cours des cours de communication est en plein essort, ne le réprimer pas ! Connectez vous instantanement (enfin après les cours) et laissez votre esprit divaguer et lachez votre créativité dans les commentaires.</p>
@@ -99,12 +100,77 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Une façon moderne et responsable de communiquer avec des lamas</h5>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="lama.jpg" alt="Unsplashed background img 2"></div>
   </div>
+
+
+<div class="container">
+      <div class="section">
+  
+        <div class="row">
+          <div class="col s12 center">
+            <h3><i class="mdi-content-send brown-text"></i></h3>
+            <h4>Rejoignez nos rangs</h4>
+            <p class="left-align light">Demain c'est une révolution qui s'avance ! Plus de communication par des phrases, plus dialogues de sourds. Demain c'est uniquement par des souvenirs photographiques que les ZZ échangeront, et nous serons là pour instaurer ce changement. <br>
+            Rejoignez nos rangs, la révolution avance ! Déjà plus de 42 ZZ nous ont rejoint dans ce mouvement historique.
+            <br>
+            Voici trois témoignages d'utilisateurs d'InstaZZ tirés au harsard :</p>
+          </div>
+        </div>
+  
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h5 class="center brown-text"></h5>
+            <img src="temoignage2.png" alt="Unsplashed background img 1" height="180" align="middle">
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h5 class="center brown-text">ZZ A.</h5>
+            <p class="light">Tout simplement exceptionnel ! J'aime tailler mes amis ZZ, et cette application me permet de le faire à travers la révolutionnante fonctionnalité "Commentaires". Je recommande vivement ! </p>
+            <h4 class="center brown-text"><i class="material-icons">star star star star</i></h4>
+          </div>
+        </div>
+        </div>
+
+        <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img src="temoignage1.png" alt="Unsplashed background img 1" height="170" align="middle">
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h5 class="center brown-text">Alexandre G.</h5>
+            <p class="light">Depuis que j'utilise InstaZZ ma vie a changé.</p>
+            <h4 class="center brown-text"><i class="material-icons">star star star star_half</i></h4>
+          </div>
+        </div>
+        </div>
+
+        <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <img src="temoignage3.png" alt="Unsplashed background img 1" height="170" align="middle">
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h5 class="center brown-text">ZZ B.</h5>
+            <p class="light">J'avais dû mal à faire des phrases qui ont du sens, et InstaZZ a résolu ce problème pour moi ! Maintenant je n'ai plus besoin de m'exprimer il me suffit de partager les photos de mes assiettes lors de mes repas.</p>
+            <h4 class="center brown-text"><i class="material-icons">star star star star</i></h4>
+          </div>
+        </div>
+        </div>
+
+      </div>
+      </div>
+    </div>
 
 
 
@@ -124,8 +190,9 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">Notre entreprise innovante</h5>
+          <p class="grey-text text-lighten-4">
+           </p>
 
 
         </div>
@@ -139,9 +206,9 @@
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
+          <h5 class="white-text">Contactez-nous</h5>
           <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Adresse mail : instazz@gmail.com</a></li>
             <li><a class="white-text" href="#!">Link 2</a></li>
             <li><a class="white-text" href="#!">Link 3</a></li>
             <li><a class="white-text" href="#!">Link 4</a></li>
