ajout d'images pour les 3 raisons

--- a/SitePromotion/index.html
+++ b/SitePromotion/index.html
@@ -13,16 +13,16 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <img src="logo.png" alt="logo">
-      <a id="logo-container" href="#" class="brand-logo"></a>
+        <img src="appareilPhoto.png" alt="logo" height="250">
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
-
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Navbar Link</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+
+        
     </div>
   </nav>
 
@@ -30,12 +30,12 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center white-text ">InstaZZ</h1>
+        <h1 class="header center white-text">InstaZZ</h1>
         <div class="row center">
-          <h5 class="header col s12 white-text">Une application pour partager ses souvenirs entre ZZ.</h5>
+            <h5 class="header col s12 white-text">Une application pour partager ses souvenirs entre ZZ.</h5>
         </div>
         <div class="row center">
-          <a href="" id="download-button" class="btn-large waves-effect waves-light indigo darken-4">Voir la galerie photo</a>
+            <a href="" id="download-button" class="btn-large waves-effect waves-light blue lighten-2">Voir la galerie photo</a>
         </div>
         <br><br>
 
@@ -43,6 +43,7 @@
     </div>
     <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
   </div>
+
 
   <div class="container">
       <div class="section">
@@ -69,7 +70,6 @@
              <h2 class="center brown-text"><i class="tiny material-icons">photo_library</i></h2>
             <h5 class="center">Postez vos images</h5>
             <p class="light">Partagez toutes vos images dignes de véritables photographes (ou pas). Vous pensez en mal à vos camarades ? Ou tout simplement vous souhaitez lui rappeler sa dernière cuite ? N'attendez plus !! C'est le moment de poster ces belles photos.</p>
-            <img src="cuite.jpg" alt="Unsplashed background img 1" height="100" align="middle">
           </div>
         </div>
 
@@ -92,6 +92,17 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col s12 m4">
+          <p class="center"><img src="cuite.jpg" alt="Unsplashed background img 1" height="100"></p>
+        </div>
+        <div class="col s12 m4">
+          <p class="center"><img src="follow.jpg" alt="Unsplashed background img 1" height="100"></p>
+        </div>
+        <div class="col s12 m4">
+          <p class="center"><img src="comment.jpg" alt="Unsplashed background img 1" height="100"></p>
+        </div>
+      </div>
     </div>
   </div>
 
