--- a/SitePromotion/index.html
+++ b/SitePromotion/index.html
@@ -94,7 +94,7 @@
 
       <div class="row">
         <div class="col s12 m4">
-          <p class="center"><img src="cuite.jpg" alt="Unsplashed background img 1" height="100"></p>
+          <p class="center"><img src="post.jpg" alt="Unsplashed background img 1" height="100"></p>
         </div>
         <div class="col s12 m4">
           <p class="center"><img src="follow.jpg" alt="Unsplashed background img 1" height="100"></p>
@@ -183,55 +183,22 @@
       </div>
     </div>
 
-
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
-  </div>
-
-  <footer class="page-footer teal">
+  <footer class="page-footer blue lighten-2">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Notre entreprise innovante</h5>
-          <p class="grey-text text-lighten-4">
-           </p>
-
-
+          <h5 class="white-text">Qui sommes nous ?</h5>
+          <p class="white-text">Deux étudiante à l'ISIMA.</p>
         </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
+        <div class="col l5 s12">
           <h5 class="white-text">Contactez-nous</h5>
           <ul>
-            <li><a class="white-text" href="#!">Adresse mail : instazz@gmail.com</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
+            <li><p class="white-text">Adresse mail : instazz@gmail.com</p></li>
           </ul>
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
+
   </footer>
 
 
