center images in commentary

--- a/SitePromotion/index.html
+++ b/SitePromotion/index.html
@@ -133,14 +133,13 @@
           </div>
         </div>
   
-      <div class="row">
-        <div class="col s12 m4">
+      <div class="row valign-wrapper">
+        <div class="col s4 m6">
           <div class="icon-block">
-            <h5 class="center brown-text"></h5>
             <img src="temoignage2.png" alt="Unsplashed background img 1" height="180" align="middle">
           </div>
         </div>
-        <div class="col s12 m4">
+        <div class="col s4 m6">
           <div class="icon-block">
             <h5 class="center brown-text">ZZ A.</h5>
             <p class="light">Tout simplement exceptionnel ! J'aime tailler mes amis ZZ, et cette application me permet de le faire à travers la révolutionnante fonctionnalité "Commentaires". Je recommande vivement ! </p>
@@ -148,14 +147,15 @@
           </div>
         </div>
         </div>
+		
 
-        <div class="row">
-        <div class="col s12 m4">
+        <div class="row valign-wrapper">
+        <div class="col s12 m6">
           <div class="icon-block">
             <img src="temoignage1.png" alt="Unsplashed background img 1" height="170" align="middle">
           </div>
         </div>
-        <div class="col s12 m4">
+        <div class="col s12 m6">
           <div class="icon-block">
             <h5 class="center brown-text">Alexandre G.</h5>
             <p class="light">Depuis que j'utilise InstaZZ ma vie a changé.</p>
@@ -164,13 +164,13 @@
         </div>
         </div>
 
-        <div class="row">
-        <div class="col s12 m4">
+        <div class="row valign-wrapper">
+        <div class="col s12 m6">
           <div class="icon-block">
             <img src="temoignage3.png" alt="Unsplashed background img 1" height="170" align="middle">
           </div>
         </div>
-        <div class="col s12 m4">
+        <div class="col s12 m6">
           <div class="icon-block">
             <h5 class="center brown-text">ZZ B.</h5>
             <p class="light">J'avais dû mal à faire des phrases qui ont du sens, et InstaZZ a résolu ce problème pour moi ! Maintenant je n'ai plus besoin de m'exprimer il me suffit de partager les photos de mes assiettes lors de mes repas.</p>
