--- a/SitePromotion/index.html
+++ b/SitePromotion/index.html
@@ -51,7 +51,7 @@
             <h5 class="header col s12 white-text">Une application pour partager ses souvenirs entre ZZ</h5>
         </div>
         <div class="row center">
-            <a href="" id="download-button" class="btn-large waves-effect waves-light blue lighten-2">Voir la galerie photos</a>
+            <a href="#Galerie" id="download-button" class="btn-large waves-effect waves-light blue lighten-2">Voir la galerie photos</a>
         </div>
         <br><br>
       </div>
