--- a/SitePromotion/index.html
+++ b/SitePromotion/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
@@ -24,42 +24,37 @@
   <!-- NAVIGATION -->
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-            <ul class="right hide-on-med-and-down">
-                <li><a href="#Pourquoi_InstaZZ">Pourquoi InstaZZ</a></li>
-                <li><a href="#Rejoingnez_nos_rangs">Rejoignez nos rangs</a></li>
-                <li><a href="#Qui_sommes_nous">Qui sommes nous</a></li>
-                <li><a href="#Galerie">Galerie Photos</a></li>
-            </ul>
-            <ul id="nav-mobile" class="sidenav">
-                <li><a href="#Pourquoi_InstaZZ">Pourquoi InstaZZ</a></li>
-                <li><a href="#Rejoingnez_nos_rangs">Rejoignez nos rangs</a></li>
-                <li><a href="#Qui_sommes_nous">Qui sommes nous</a></li>
-                <li><a href="#Galerie">Galerie Photos</a></li>
-            </ul>
+        <img src="appareilPhoto.png" alt="logo" height="250">
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#Pourquoi_InstaZZ">Pourquoi InstaZZ</a></li>
+            <li><a href="#Rejoingnez_nos_rangs">Rejoignez nos rangs</a></li>
+            <li><a href="#Qui_sommes_nous">Qui sommes nous</a></li>
+            <li><a href="#Galerie">Galerie Photos</a></li>
+          </ul>
+          <ul id="nav-mobile" class="sidenav">
+            <li><a href="#Pourquoi_InstaZZ">Pourquoi InstaZZ</a></li>
+            <li><a href="#Rejoingnez_nos_rangs">Rejoignez nos rangs</a></li>
+            <li><a href="#Qui_sommes_nous">Qui sommes nous</a></li>
+            <li><a href="#Galerie">Galerie Photos</a></li>
+          </ul>
             <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        </div>
+    </div>
   </nav>
 
   <!-- BANNIERE & LOGO -->
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
-            <div class="row valign-wrapper">
-                <div class="col s9 m4 xl2">
-                    <img src="appareilPhoto.png" alt="logo" height="150">
-                </div>
-                <div class="col s12 m2 pull-m4">
-                    <h1 class="header center white-text">InstaZZ</h1>
-                </div>
-            </div>
-            <div class="row center">
-                <h5 class="header col s12 white-text">Une application pour partager ses souvenirs entre ZZ</h5>
-            </div>
-            <div class="row center">
-                <a href="#Galerie" id="download-button" class="btn-large waves-effect waves-light blue lighten-2">Voir la galerie photos</a>
-            </div>
-            <br><br>
-       </div>
+        <br><br>
+        <h1 class="header center white-text">InstaZZ</h1>
+        <div class="row center">
+            <h5 class="header col s12 white-text">Une application pour partager ses souvenirs entre ZZ</h5>
+        </div>
+        <div class="row center">
+            <a href="#Galerie" id="download-button" class="btn-large waves-effect waves-light blue lighten-2">Voir la galerie photos</a>
+        </div>
+        <br><br>
+      </div>
     </div>
       <div class="parallax"><img src="background1.jpg" alt="image bannière"></div>
   </div>
